# NDK-example

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/mr/adkhambek/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  security-lib.cpp  store-lib.cpp
app/src/main/java/mr/adkhambek/ndk/: MainActivity.kt  SecurityActivity.kt  StoreActivity.kt
app/src/main/res/layout/: activity_security.xml  activity_store.xml
app/src/test/java/mr/adkhambek/ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
